@@ -54,18 +54,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <!-- build versions -->
-        <java.version>11</java.version>
+        <java.version>17</java.version>
         <maven.version>3.8.6</maven.version>
         <maven.resources.version>3.3.0</maven.resources.version>
         <maven.compiler.version>3.8.0</maven.compiler.version>
-        <maven.compiler.release>11</maven.compiler.release>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>17</maven.compiler.release>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
         <!-- paths -->
         <maven.repo.local>${user.home}/.m2/repository</maven.repo.local>
 
         <!-- plugin versions -->
-        <jacoco.version>0.8.2</jacoco.version>
+        <jacoco.version>0.8.10</jacoco.version>
         <maven.source.plugin.version>3.2.1</maven.source.plugin.version>
         <maven-javadoc-plugin.version>3.5.0</maven-javadoc-plugin.version>
         <surefire.report.version>2.6</surefire.report.version>
@@ -80,7 +80,7 @@
         <sonar.organization>iti-ict</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
-        <jext.version>1.1.3</jext.version>
+        <jext.version>1.2.0-SNAPSHOT</jext.version>
     </properties>
 
 
@@ -136,7 +136,7 @@
                 <configuration>
                     <argLine>${surefireJacocoAgent}
                         -Djdk.net.URLClassPath.disableClassPathURLCheck=true
-                        --illegal-access=permit</argLine>
+                    </argLine>
                 </configuration>
             </plugin>
             <!-- Failsafe with JaCoCo agent -->
@@ -470,7 +470,7 @@
             <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
-                <version>3.0.0</version>
+                <version>4.2.0</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.groovy</groupId>
